--- a/Engines/pom.xml
+++ b/Engines/pom.xml
@@ -8,6 +8,13 @@
     <version>4.0.0</version>
     <url>https://github.com/factset/analyticsapi-engines-java-sdk</url>
     <description>SDK for FactSet Analytics Engines API</description>
+    <distributionManagement>
+        <repository>
+            <id>ossrh</id>
+            <name>Central Repository OSSRH</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
     <scm>
         <connection>scm:git:git://github.com/factset/analyticsapi-engines-java-sdk.git</connection>
         <developerConnection>scm:git:ssh://github.com:factset/analyticsapi-engines-java-sdk.git</developerConnection>
